testsuite/tests/linear/should_fail/LinearAsPat.stderr

LinearAsPat.hs:6:12: error:
    • @-patterns are only allowed at multiplicity Omega
    • In an equation for ‘shouldFail’: shouldFail x@True = x
